# FlowLog

./: .gitignore  Cargo.toml  README.md
config/: log.toml
develop_log/: 2026.6.4.md  2026.6.5.md  develop.md  study_note.md
examples/: basic1.rs  test.rs
src/: config_watcher.rs  constants.rs  lib.rs  macros.rs  main.rs
src/config/: config_watcher.rs  file_config.rs  mod.rs  pipe_config.rs  s3_config.rs  s3_sink_config.rs
src/core/: config.rs  mod.rs  record.rs
src/entity/: level.rs  mod.rs  record.rs
src/pipeline/: config.rs  emitter.rs  mod.rs  processor.rs  translator.rs
src/service/: mod.rs
src/service/console_log/: console_config.rs  mod.rs
src/service/file_log/: file_config.rs  file_sink.rs  mod.rs
src/service/pipeline/: emitter.rs  mod.rs  pipe_config.rs  translator.rs
src/service/s3_log/: mod.rs  s3_sink.rs  s3_sink_config.rs
src/sinks/: console.rs  console_sink.rs  file.rs  file_sink.rs  mod.rs  s3.rs  s3_sink.rs
src/tools/: file_tools.rs  mod.rs  s3_tools.rs
src/tools/file/: file_tools.rs  mod.rs
src/tools/s3/: mod.rs  s3_config.rs  s3_tools.rs
tests/: basic.rs  main_test.rs
