[package]
authors = ["freeman"]
name = "flowlog"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A more powerful with mulity_output logger"
repository = "https://github.com/FreeMan271828/FlowLog"

[dependencies]
chrono = "0.4.44"
config = "0.15.23"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }