[package]
authors = ["freeman"]
name = "betterlog"
version = "0.3.1"
edition = "2024"
license = "MIT"
description = "A more powerful with mulity_output logger"
repository = "https://github.com/FreeMan271828/FlowLog"

[dependencies]
chrono = {version = "0.4.44", features = ["serde"]}
config = "0.15.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
notify = "6.1"
notify-debouncer-mini = "0.4"
aws-sdk-s3 = "1.0"
aws-config = "1.0"
tokio = "1.52.3"
bytes = "1.11.1"